# glabmetrics

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SEMANTIC_VERSIONING.md  STRATEGIC_INSIGHTS.md  TESTING_PLAN.md  USAGE.md  pyproject.toml  test_hooks.txt
.claude/: CLAUDE.md  context.md  hooks-setup.md  workflow.md
.github/workflows/: ci.yml  release.yml
glabmetrics/: __init__.py  __main__.py  analyzer.py  balanced_analyzer.py  data_storage.py  debug_analyzer.py  enhanced_ci_analyzer.py  enhanced_ci_config_analyzer.py  enhanced_issue_analyzer.py  enhanced_mr_analyzer.py  enhanced_performance_analyzer.py  enhanced_report_generator.py  enhanced_submodule_analyzer.py  fast_analyzer.py  gitlab_client.py  main.py  parallel_collector.py  performance_analyzer.py  performance_tracker.py  report_generator.py  smart_sampler.py  ultra_fast_analyzer.py  workflow_analyzer.py
glabmetrics/dashboard/: __init__.py  actionable_dashboard.py  comprehensive_dashboard.py  performance_dashboard.py
tests/: conftest.py  test_analyzer.py  test_data_storage.py  test_gitlab_client.py  test_report_generator.py  test_security.py  test_template_data.py
