[project]
name = "glabmetrics"
version = "1.0.0"
description = "Comprehensive CLI tool for GitLab instance analysis with detailed HTML reporting and optimization recommendations"
authors = [{name = "CDDS AB", email = "pypi@cdds.se"}]
maintainers = [{name = "CDDS AB", email = "pypi@cdds.se"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Environment :: Console",
]
keywords = [
    "gitlab", "devops", "analytics", "reporting", "cli", "statistics", 
    "monitoring", "optimization", "git", "repository-management", "metrics"
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/cdds-ab/glabmetrics"
Documentation = "https://github.com/cdds-ab/glabmetrics#readme"
Repository = "https://github.com/cdds-ab/glabmetrics.git"
"Bug Tracker" = "https://github.com/cdds-ab/glabmetrics/issues"
Changelog = "https://github.com/cdds-ab/glabmetrics/blob/main/CHANGELOG.md"

[project.scripts]
glabmetrics = "glabmetrics.main:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
test-cov = "pytest --cov=glabmetrics --cov-report=html --cov-report=term --cov-report=xml"
test-fast = "pytest -x --tb=short"
test-verbose = "pytest -v --tb=long"
lint = "flake8 glabmetrics tests"
format = "black glabmetrics tests"
format-check = "black --check glabmetrics tests"
commit = "cz commit"
bump = "cz bump"
changelog = "cz changelog"
pre-commit-install = "pre-commit install"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that test API interactions"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["glabmetrics"]
omit = [
    "tests/*",
    "glabmetrics/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "freezegun>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "commitizen>=3.12.0",
    "pre-commit>=3.5.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false
version = "1.0.0"
version_files = [
    "glabmetrics/__init__.py:__version__"
]

# PDM versioning managed by commitizen

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | venv
    | build
    | dist
  )/
)
'''